--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -5,7 +5,11 @@
     <title>Home - Blog</title>
   </head>
   <body>
-    <h1>Welcome to the Blog Home Page!</h1>
-    <p>This is the homepage of your Django blog application.</p>
+    <div
+      style="text-align: center; padding: 20px; font-family: Arial, sans-serif"
+    >
+      <h1>Welcome to the Blog Home Page!</h1>
+      <p>This is the homepage of your Django blog application.</p>
+    </div>
   </body>
 </html>
