--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Home - Blog</title>
-  </head>
-  <body>
-    <div
-      style="text-align: center; padding: 20px; font-family: Arial, sans-serif"
-    >
-      <h1>Welcome to the Blog Home Page!</h1>
-      <p>This is the homepage of your Django blog application.</p>
-    </div>
-  </body>
-</html>
+{% extends 'base.html'%} {% block content%}{% load static %}
+
+<div class="container">
+  <img
+    src="{% static 'img/background.jpg' %}"
+    alt="Background"
+    style="
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      filter: brightness(50%);
+      position: relative;
+      z-index: -1;
+    "
+  />
+</div>
+<div
+  style="
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  "
+>
+  <h1 style="padding: 2rem">Welcome to the James' Blog Home Page!</h1>
+  <p>This is the homepage of your Django blog application!</p>
+  <p>Explore the pages and learn more about my application.</p>
+</div>
+{% endblock content%}
