--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,52 +1,31 @@
-{% load static %}
+{% extends 'base.html'%} {% block content%}{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <title>About</title>
-  </head>
-  <body>
-    <h1
-      style="text-align: center; padding: 20px; font-family: Arial, sans-serif"
-    >
-      About Me
-    </h1>
-    <div class="card" style="width: 18rem; margin: auto">
-      <img
-        src="{% static 'img/james.jpeg' %}"
-        alt="About Me"
-        style="
-          width: 200px;
-          display: block;
-          margin: auto;
-          padding-top: 10px;
-          text-align: center;
-          border-radius: 50%;
-        "
-      />
-      <div class="card-body">
-        <h5 class="card-title">James Jones</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Batman</h6>
-        <h6 class="card-subtitle mb-2 text-muted">Year: 2025</h6>
-        <p class="card-text">
-          Welcome to my blog! Here you can find articles, tutorials, and updates
-          about my journey in web development. I have been passionate about
-          coding for several years and love sharing my knowledge with others.
-          Feel free to explore the posts and leave your comments!
-        </p>
-      </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<h1 style="text-align: center; padding: 20px; font-family: Arial, sans-serif">
+  About Me
+</h1>
+<div class="card" style="width: 18rem; margin: auto">
+  <img
+    src="{% static 'img/james.jpeg' %}"
+    alt="About Me"
+    style="
+      width: 200px;
+      display: block;
+      margin: auto;
+      padding-top: 10px;
+      text-align: center;
+      border-radius: 50%;
+    "
+  />
+  <div class="card-body">
+    <h5 class="card-title">James Jones</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Batman</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Year: 2025</h6>
+    <p class="card-text">
+      Welcome to my blog! Here you can find articles, tutorials, and updates
+      about my journey in web development. I have been passionate about coding
+      for several years and love sharing my knowledge with others. Feel free to
+      explore the posts and leave your comments!
+    </p>
+  </div>
+</div>
+{% endblock content%}
