--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <title>Django and Python Application</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Django</a>
         <button
