--- a/templates/base.html
+++ b/templates/base.html
@@ -10,41 +10,15 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <title>Django and Python Application</title>
+    <title>{% block title %}{% endblock title %}</title>
+    {% block css %}{% endblock css %}
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Django</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href={% url 'home' %}
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href={% url 'about' %}>About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+    <!-- Navbar -->
+    {% include 'navbar.html'%}
     <!-- Main Content -->
     <div class="container mt-4" style="text-align: center">
-      {% block content %} {% endblock %}
+      {% block content %} {% endblock %} {% block js %} {% endblock js %}
     </div>
     <hr />
 
