--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container w-50 style="min-width:300px; max-width:500px;" >
     <h1 class="mb-4">Login Page</h1>
     <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}    {{form.as_p }}
-        <button type="submit" class="btn btn-success">Login</button>
+        {% csrf_token %}     
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-success d-block mx-auto">Login</button>
     </form>
 </div>
 
