--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -13,6 +13,7 @@
     <p>Author: {{single_post.author}}</p>
     <p>Created on: {{single_post.created_on}}</p>
     <p>Last updated: {{single_post.updated_on}}</p>
+    <p>Status: {{ single_post.status }}</p>
   </div>
   <hr />
 </div>
