--- a/templates/posts/drafts.html
+++ b/templates/posts/drafts.html
@@ -4,10 +4,10 @@
 {% endblock css %} {% block content %}
 
 <div class="posts_list">
-  <h1>All Published Posts</h1>
+  <h1>Draft Posts</h1>
   <hr />
   <br />
-  {% for item in post_list %}
+  {% for item in post_drafts %}
   <div>
     <h2><a href="{% url 'post_detail' item.id %}">{{ item.title }}</a></h2>
     <br />
