--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,38 +1,34 @@
 .home_container {
-    background-image: src="{% static 'img/background.jpg' %}";
+    background-image: url('/static/img/background.jpg') !important;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 400px;
-    object-fit: cover;
     filter: brightness(50%);
     position: relative;
-    z-index: -1;
-}
-
-.home_container img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    filter: brightness(50%);
-    position: relative;
-    z-index: -1;
+    z-index: 1;
     border-radius: 1.25em;
+    padding-top: 20px;
+
 }
 
-h1 {
+nav.navbar {
+    position: relative;
+    z-index: 100;
+}
+
+.hometext h1 {
     text-align: center;
-    padding: 20px;
-    font-family: Arial, sans-serif
+    font-family: Arial, sans-serif top: 50px;
+    padding-top: 40px;
 }
 
 .hometext {
     text-align: center;
+    width: 50%;
     color: white;
     position: absolute;
-    top: 20%;
+
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.hometext h1 {
-    padding: 2em
 }
