--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href= {% url 'home'%} >James' Django</a>
+        <a class="navbar-brand" href="{% url 'home'%}" >James' Django</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -15,26 +15,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href={% url 'home' %}
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href={% url 'about' %}>About</a>
+              <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href={% url 'posts' %}>Posts</a>
+              <a class="nav-link" href="{% url 'posts' %}">Posts</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href={% url 'post_new' %}>New Posts</a>
+              <a class="nav-link" href="{% url 'post_new' %}">New Posts</a>
             </li>
             <!--Logout-->
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href={% url 'post_drafts' %}>Drafts</a>
+              <a class="nav-link" href="{% url 'post_drafts' %}">Drafts</a>
             </li> 
             <li class="nav-item">
-              <a class="nav-link" href={% url 'post_archived' %}>Archived</a> 
+              <a class="nav-link" href="{% url 'post_archived' %}">Archived</a> 
             </li>
             <li class="nav-item">
                 <form method="post" action="{% url 'logout' %}">
@@ -44,21 +42,20 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href={% url 'login' %}>Login</a>
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=#>Register</a>
+              <a class="nav-link" href="{% url 'account_new' %}">Register</a>
             </li>
             {% endif %}
             
           </ul>
           {% if user.is_authenticated %}
           <div class="d-flex ms-auto">
-            <span class="badge rounded-pill text-bg-success">{{ user.username }}</span>
+            <a class="badge rounded-pill text-bg-success" href="{% url 'account_detail' %}">{{ user.username }}</a>
           </div>
           {% endif %}
               Logged in as {{ user.username }}
-            </span>
         </div>
       </div>
     </nav>
